--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,9 @@ firebase-admin>=6.2.0
 python-decouple>=3.8
 djangorestframework>=3.14.0
 django-cors-headers>=4.1.0
-drf-yasg>=1.21.7 
+drf-yasg>=1.21.7
+social-auth-app-django>=5.4.0
+django-allauth>=0.58.2
+python-jose>=3.3.0
+cryptography>=41.0.7
+requests>=2.31.0 
